--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental.css
@@ -25,7 +25,7 @@
 
 }
 .fondo-mapa{
-    background:url("#{resource['img/mounstro/whom.svg']}") no-repeat top left/120px ,url("#{resource['img/alumno/lineas-rojas.svg']}") no-repeat center center/cover;
+    background:url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whom.svg") no-repeat top left/120px ,url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/lineas-rojas.svg") no-repeat center center/cover;
 }
 
 textarea{
@@ -85,19 +85,19 @@ input[type=text]::placeholder{
 }
 
 .img-mapa-who{
-    background: url("#{resource['img/mounstro/who.svg']}") no-repeat gold center bottom/70px 70px;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/who.svg") no-repeat gold center bottom/70px 70px;
 }
 .img-mapa-what{
-    background: url("#{resource['img/icono/pregunta.svg']}") no-repeat gold center bottom/70px 70px;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/pregunta.svg") no-repeat gold center bottom/70px 70px;
 }
 .img-mapa-when{
-    background: url("#{resource['img/icono/reloj.svg']}") no-repeat gold center bottom/70px 70px;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/reloj.svg") no-repeat gold center bottom/70px 70px;
 }
 .img-mapa-where{
-    background: url("#{resource['img/icono/casa.svg']}") no-repeat gold center bottom/70px 70px;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/casa.svg") no-repeat gold center bottom/70px 70px;
 }
 .img-mapa-why{
-    background: url("#{resource['img/icono/lupar.svg']}") no-repeat gold center bottom/70px 70px;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/lupar.svg") no-repeat gold center bottom/70px 70px;
 }
 
 
