--- a/tecolotl-web/src/main/webapp/template/escolar/footer-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/footer-alumno.xhtml
@@ -6,10 +6,10 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <footer class="botton-footer uk-position-fixed nave-inferior">
-    <div class="uk-position-bottom-center"><h:graphicImage library="img" name="alumno/control-a.svg" class="" alt="" width="250" height="auto"/></div>
+    <div class="uk-position-bottom-center"><img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/control-a.svg" class="" alt="" width="250" height="auto"/></div>
 </footer>
-<h:outputScript library="js" name="spinner.js"/>
-<h:outputScript library="js" name="uikit.js"/>
-<h:outputScript library="js" name="uikit-icons.js"/>
-<h:outputScript library="js" name="/alumno/filtro.js"/>
+<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/spinner.js"/>
+<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit.js"/>
+<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/uikit-icons.js"/>
+<script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/filtro.js"/>
 </html>
