--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -1,5 +1,5 @@
 .vacio{
-    background-image: url("#{resource['img/alumno/pop-art/mensaje5.svg']}");
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pop-art/mensaje5.svg");
     background-position: center center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@
 }
 
 .finalVideo{
-    background: url("#{resource['img/esquadron.svg']}") no-repeat top left/90px,url("#{resource['img/esquadron.svg']}") no-repeat bottom right/90px;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg") no-repeat top left/90px,url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg") no-repeat bottom right/90px;
     background-color: #00002D!important;
     position: absolute;
     top: 0;
