--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
@@ -1,10 +1,10 @@
 .fondo-mapa-10{
-    background-image: url("#{resource['img/alumno/mapa-mental/lineas-verdes.svg']}");
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/mapa-mental/lineas-verdes.svg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 .globo-10{
-    background-image: url("#{resource['img/alumno/pop-art/mensaje1.svg']}");
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pop-art/mensaje1.svg");
     background-origin:content-box;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -15,7 +15,7 @@
 }
 
 .fondo-imagen-10{
-    background-image: url("#{resource['img/mounstro/whom.svg']}");
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whom.svg");
     background-origin:content-box;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -26,7 +26,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    background-image: url("#{resource['img/alumno/pop-art/popart-rojo.svg']}");
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pop-art/popart-rojo.svg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 85%;
