--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -1,5 +1,5 @@
 .fondo-13{
-    background:url("#{resource['img/alumno/fondo-13.png']}") no-repeat center/100% 100%;
+    background:url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/fondo-13.png") no-repeat center/100% 100%;
     height: 1300px;
     display: flex;
     flex-wrap: wrap;
