--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-14.css
@@ -1,6 +1,6 @@
 .fondo-14{
-    background: url("#{resource['img/mounstro/whose.svg']}") no-repeat left top/200px,
-    url("#{resource['img/alumno/mapa-mental/lineas-amarillas.svg']}") no-repeat center/cover;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whose.svg") no-repeat left top/200px,
+    url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/mapa-mental/lineas-amarillas.svg") no-repeat center/cover;
     height: 1200px;
 }
 
@@ -12,7 +12,7 @@
     font-weight: bold;
 }
 .arbol{
-    background: url("#{resource['img/alumno/arbol.svg']}") no-repeat center/100% 100%;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/arbol.svg") no-repeat center/100% 100%;
     height: 800px;
     width: 100%;
 }
@@ -81,7 +81,7 @@
 
 .titulo-14{
     width: 40%;
-    background: url("#{resource['img/alumno/pop-art/pop-art-2.svg']}") no-repeat center/100%;
+    background: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/pop-art/pop-art-2.svg") no-repeat center/100%;
     background-clip: content-box;
     margin: auto;
     display: flex;
