--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
@@ -1,5 +1,5 @@
 .fondo-mapa-efecto{
-    background-image: url("#{resource['img/alumno/mapa-mental/lineas-azules.svg']}");
+    background-image: url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/mapa-mental/lineas-azules.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
