--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental-historieta.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental-historieta.css
@@ -1,5 +1,5 @@
 .fondo-6{
-    background:  url("#{resource['img/mounstro/whom.svg']}") no-repeat top right/30%,url("#{resource['img/alumno/fondo-6.png']}") no-repeat center center/100% 100%;
+    background:  url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/whom.svg") no-repeat top right/30%,url("https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/fondo-6.png") no-repeat center center/100% 100%;
     /*background-repeat: no-repeat;*/
     /*background-size: 100% 100%;*/
     height: 1200px;
