--- a/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
@@ -9,7 +9,7 @@
 <ui:include src="head-alumno.xhtml"/>
 <h:body  pt:uk-height-viewport="">
     <div id="cargado" class="spinner spinner-open" >
-        <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""/>
+        <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/esquadron-animado.svg" uk-svg="" alt=""/>
     </div>
     <header id="top-head" class="uk-position-fixed">
         <ui:insert name="hamburguesa"/>
